--- a/assets/port-dets/webd.html
+++ b/assets/port-dets/webd.html
@@ -121,15 +121,44 @@
               <ul>
                 <li><strong>Title</strong>: Web Development</li>
                 <li><strong>Module no.</strong>: 01</li>
+                <li><strong>Start date</strong>:02 April 2024</li>
                 <li><strong>Assignment date</strong>:07 April 2024</li>
                 <!-- <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li> -->
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>This is an example of portfolio detail</h2>
+              <h2>A Journey into Web Development</h2>
               <p>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+                In the past week, I embarked on an exciting journey into the realm of web development, exploring various technologies and tools that form the backbone of the modern web. It was a week filled with learning, creativity, and hands-on experience that helped me gain a deeper understanding of HTML, CSS, JavaScript, Git, and GitHub.
               </p>
+                <br>
+              <h3>Day 1: Crafting the College Timetable</h3>
+                <img src="../img/assigments/webd/d1.png" alt="d1.png" height="150%" width="150%">
+              <p>The journey began with the creation of a college timetable using HTML and CSS. This task allowed me to understand the structure of a basic webpage and how CSS can be used to style and layout elements. I learned about the importance of semantic HTML and how it impacts the accessibility and readability of the content.</p>
+                <br>
+              <h3>Day 2: Building the Profile Page</h3>
+                <img src="../img/assigments/webd/d2.png" alt="d1.png" height="150%" width="150%">
+              <p>Next, I worked on developing a static webpage for my profile. This task helped me apply my HTML and CSS skills to create a personalized webpage that showcased my skills and interests. I learned about CSS properties such as flexbox and grid that helped me create a responsive layout for my profile page.</p>
+                <br>
+              <h3>Day 3: Adding Animation to Buttons</h3>
+                <img src="../img/assigments/webd/d3.png" alt="d1.png" height="150%" width="150%">
+              <p>I then moved on to creating a static webpage with six buttons, each featuring a different animation. This task introduced me to the world of CSS animations and transitions, allowing me to add interactive elements to my webpage. I experimented with various animation properties such as transform and transition to create visually appealing effects.</p>
+                <br>
+              <h3>Day 4: Introduction to JavaScript</h3>
+                <img src="../img/assigments/webd/d4.png" alt="d1.png" height="150%" width="150%">
+              <p>On the fourth day, I delved into the basics of JavaScript and learned how to use it with HTML. I explored concepts such as variables, data types, and functions, and applied them to create interactive elements on my webpages. JavaScript proved to be a powerful tool for adding dynamic content and interactivity to my projects.</p>
+                <br>
+              <h3>Day 5: Git and GitHub</h3>
+              <p>I dedicated the fifth day to learning about Git and GitHub, essential tools for version control and collaboration in web development. I learned how to create repositories, commit changes, and push them to GitHub. I also explored branching and merging, which are crucial concepts for managing a project's codebase.</p>
+                <br>
+              <h3>Day 6: Developing the Portfolio Site</h3>
+              <p>With a solid foundation in place, I began developing my own portfolio site. I applied my knowledge of HTML, CSS, and JavaScript to create a professional-looking site that showcased my projects and skills. I focused on creating a responsive design that looked great on both desktop and mobile devices.</p>
+                <br>
+              <h3>Day 7: Hosting on GitHub Pages</h3>
+              <p>The final day of the week was dedicated to hosting my portfolio site on GitHub Pages. I learned how to create a gh-pages branch in my repository and push my site's files to this branch. Within minutes, my site was live on the web, accessible to anyone with an internet connection.</p>
+                <br>
+              <h3>Conclusion</h3>
+              <p>In conclusion, the past week has been incredibly rewarding, filled with learning and growth. I have gained a deeper understanding of web development technologies and tools, and I am excited to continue my journey and explore more advanced concepts in the weeks to come.</p>
             </div>
           </div>
 
