--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-img">
               <!-- <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt=""> -->
-              <a href="assets/port-dets/template.html" class="details-link" title="More Details"><img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt=""></a>
+              <a href="assets/port-dets/webd.html" class="details-link" title="More Details"><img src="assets/img/assigments/webd/profile.jpg" class="img-fluid" alt=""></a>
 
               </div>
             <div class="portfolio-info">
