--- a/assets/port-dets/webd.html
+++ b/assets/port-dets/webd.html
@@ -149,12 +149,14 @@
               <p>On the fourth day, I delved into the basics of JavaScript and learned how to use it with HTML. I explored concepts such as variables, data types, and functions, and applied them to create interactive elements on my webpages. JavaScript proved to be a powerful tool for adding dynamic content and interactivity to my projects.</p>
                 <br>
               <h3>Day 5: Git and GitHub</h3>
+                <a href="https://github.com/0xguava/">Github Profile</a>
               <p>I dedicated the fifth day to learning about Git and GitHub, essential tools for version control and collaboration in web development. I learned how to create repositories, commit changes, and push them to GitHub. I also explored branching and merging, which are crucial concepts for managing a project's codebase.</p>
                 <br>
               <h3>Day 6: Developing the Portfolio Site</h3>
               <p>With a solid foundation in place, I began developing my own portfolio site. I applied my knowledge of HTML, CSS, and JavaScript to create a professional-looking site that showcased my projects and skills. I focused on creating a responsive design that looked great on both desktop and mobile devices.</p>
                 <br>
               <h3>Day 7: Hosting on GitHub Pages</h3>
+                <img src="../img/assigments/webd/d7.png" alt="d1.png" height="150%" width="150%">
               <p>The final day of the week was dedicated to hosting my portfolio site on GitHub Pages. I learned how to create a gh-pages branch in my repository and push my site's files to this branch. Within minutes, my site was live on the web, accessible to anyone with an internet connection.</p>
                 <br>
               <h3>Conclusion</h3>
