improved the site

--- a/assets/port-dets/webd.html
+++ b/assets/port-dets/webd.html
@@ -115,7 +115,7 @@
           <!--   </div> -->
           <!-- </div> -->
 
-          <div class="col-lg-4">
+          <!-- <div class="col-lg-4"> -->
             <div class="portfolio-info">
               <h3>Assignment Info</h3>
               <ul>
@@ -133,36 +133,77 @@
               </p>
                 <br>
               <h3>Day 1: Crafting the College Timetable</h3>
-                <img src="../img/assigments/webd/d1.png" alt="d1.png" height="150%" width="150%">
-              <p>The journey began with the creation of a college timetable using HTML and CSS. This task allowed me to understand the structure of a basic webpage and how CSS can be used to style and layout elements. I learned about the importance of semantic HTML and how it impacts the accessibility and readability of the content.</p>
+                <img src="../img/assigments/webd/d1.png" alt="d1.png" height="600px">
+                <br><br>
+                <p>The journey into web development commenced with an engaging task: crafting a college timetable using HTML and CSS. This task served as a foundational exercise, offering insights into the structural components of a basic webpage and showcasing the transformative capabilities of CSS in styling and organizing elements.
+
+As I delved into this task, I not only learned about the technical aspects of HTML and CSS but also gained a deeper understanding of their significance in web development. I discovered how semantic HTML, with its emphasis on meaningful tags and attributes, plays a crucial role in enhancing the accessibility and readability of web content. I was able to create a well-structured timetable that not only looked visually appealing but also conveyed its content in a clear and understandable manner.
+
+Moreover, this task provided me with valuable insights into CSS styling techniques, including the use of selectors, properties, and values to customize the appearance of elements. I experimented with different styles, such as colors, fonts, and spacing, to create a visually appealing layout for the timetable. I also learned about the importance of responsive design, ensuring that the timetable was accessible and user-friendly across different devices and screen sizes.
+
+In conclusion, this task was more than just creating a timetable; it was a foundational step in my journey into web development. It equipped me with essential skills and knowledge that will serve as a solid foundation as I continue to explore and expand my expertise in this dynamic field.</p>
                 <br>
               <h3>Day 2: Building the Profile Page</h3>
-                <img src="../img/assigments/webd/d2.png" alt="d1.png" height="150%" width="150%">
+                <img src="../img/assigments/webd/d2.png" alt="d1.png" height="600px">
+                <br><br>
               <p>Next, I worked on developing a static webpage for my profile. This task helped me apply my HTML and CSS skills to create a personalized webpage that showcased my skills and interests. I learned about CSS properties such as flexbox and grid that helped me create a responsive layout for my profile page.</p>
                 <br>
               <h3>Day 3: Adding Animation to Buttons</h3>
-                <img src="../img/assigments/webd/d3.png" alt="d1.png" height="150%" width="150%">
+                <img src="../img/assigments/webd/d3.png" alt="d1.png" height="600px">
+                <br><br>
               <p>I then moved on to creating a static webpage with six buttons, each featuring a different animation. This task introduced me to the world of CSS animations and transitions, allowing me to add interactive elements to my webpage. I experimented with various animation properties such as transform and transition to create visually appealing effects.</p>
                 <br>
               <h3>Day 4: Introduction to JavaScript</h3>
-                <img src="../img/assigments/webd/d4.png" alt="d1.png" height="150%" width="150%">
+              <br>
+                <img src="../img/assigments/webd/d4.png" alt="d1.png" height="600px">
+                <br><br>
               <p>On the fourth day, I delved into the basics of JavaScript and learned how to use it with HTML. I explored concepts such as variables, data types, and functions, and applied them to create interactive elements on my webpages. JavaScript proved to be a powerful tool for adding dynamic content and interactivity to my projects.</p>
                 <br>
               <h3>Day 5: Git and GitHub</h3>
-                <a href="https://github.com/0xguava/">Github Profile</a>
               <p>I dedicated the fifth day to learning about Git and GitHub, essential tools for version control and collaboration in web development. I learned how to create repositories, commit changes, and push them to GitHub. I also explored branching and merging, which are crucial concepts for managing a project's codebase.</p>
+              <ol>
+                <li><strong>Initialize Git within directory:</strong> Use the following command to initialize a new Git repository in your project directory.</li>
+                <pre><code>git init</code></pre>
+
+                <li><strong>Configure Git:</strong> Configure your Git username and email address using the following commands. This is important for tracking your changes.</li>
+                      <pre><code>git config --global user.name "0xguava"
+git config --global user.email "demo.lappy@protonmail.com"</code></pre>
+
+                <li><strong>Add Files:</strong> Add the files you want to track to the staging area using the following command.</li>
+                <pre><code>git add .</code></pre>
+
+                <li><strong>Commit Changes:</strong> Commit your changes to the local repository with a descriptive message.</li>
+                <pre><code>git commit -m "initial commit"</code></pre>
+
+                <li><strong>Connect to Remote Repository:</strong> If you haven't already, connect your local repository to github repository using the following command.</li>
+                <pre><code>git remote add origin git@github.com:0xguava/fporto.git</code></pre>
+                <strong>*I've configured ssh keys in my github profile, my repository link could seem a bit different to you.*</strong>
+                <br>
+
+                <li><strong>Push Changes:</strong> Push your committed changes to the remote repository.</li>
+                <pre><code>git push -u origin master</code></pre>
+
+                <li><strong>Link to my Github profile:</strong><a href="https://github.com/0xguava/"> 0xguava</a></li>
+              </ol>
                 <br>
               <h3>Day 6: Developing the Portfolio Site</h3>
               <p>With a solid foundation in place, I began developing my own portfolio site. I applied my knowledge of HTML, CSS, and JavaScript to create a professional-looking site that showcased my projects and skills. I focused on creating a responsive design that looked great on both desktop and mobile devices.</p>
                 <br>
               <h3>Day 7: Hosting on GitHub Pages</h3>
-                <img src="../img/assigments/webd/d7.png" alt="d1.png" height="150%" width="150%">
+                <img src="../img/assigments/webd/d7.png" alt="d1.png" height="600px">
+                <br><br>
+                <ol>
+                <li><strong>Step 1: </strong>Go to the setting tab within your github repository, which contains your portfolio site code.</li>
+                <li><strong>Step 2: </strong>Navigate to the pages tab under code and automation section.</li>
+                <li><strong>Step 3: </strong>In there, under branch section select you repository branch(in my case, master)</li>
+                <li><strong>Step 4: </strong>Now, simply click on save. Within 1-2 minutes your site will be live. *as shown in picture*</li>
+                </ol>
               <p>The final day of the week was dedicated to hosting my portfolio site on GitHub Pages. I learned how to create a gh-pages branch in my repository and push my site's files to this branch. Within minutes, my site was live on the web, accessible to anyone with an internet connection.</p>
                 <br>
               <h3>Conclusion</h3>
               <p>In conclusion, the past week has been incredibly rewarding, filled with learning and growth. I have gained a deeper understanding of web development technologies and tools, and I am excited to continue my journey and explore more advanced concepts in the weeks to come.</p>
             </div>
-          </div>
+          <!-- </div> -->
 
         </div>
 
