--- a/assets/port-dets/webd.html
+++ b/assets/port-dets/webd.html
@@ -9,10 +9,6 @@
   <meta content="" name="description">
   <meta content="" name="keywords">
 
-  <!-- Favicons -->
-  <!-- <link href="assets/img/favicon.png" rel="icon"> -->
-  <!-- <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon"> -->
-
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Satisfy" rel="stylesheet">
 
@@ -26,50 +22,10 @@
   <!-- Template Main CSS File -->
   <link href="../css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: Laura
-  * Template URL: https://bootstrapmade.com/laura-free-creative-bootstrap-theme/
-  * Updated: Mar 17 2024 with Bootstrap v5.3.3
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body>
 
-  <!-- ======= Header ======= -->
-  <!-- <header id="header" class="fixed-top d-flex justify-content-center align-items-center "> -->
-  <!---->
-  <!--   <nav id="navbar" class="navbar"> -->
-  <!--     <ul> -->
-  <!--       <li><a class="nav-link scrollto " href="#hero">Home</a></li> -->
-  <!--       <li><a class="nav-link scrollto" href="#about">About</a></li> -->
-  <!--       <li><a class="nav-link scrollto" href="#services">Services</a></li> -->
-  <!--       <li><a class="nav-link scrollto" href="#resume">Resume</a></li> -->
-  <!--       <li><a class="nav-link scrollto active" href="#portfolio">Assignments</a></li> -->
-  <!--       <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a> -->
-  <!--         <ul> -->
-  <!--           <li><a href="#">Drop Down 1</a></li> -->
-  <!--           <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a> -->
-  <!--             <ul> -->
-  <!--               <li><a href="#">Deep Drop Down 1</a></li> -->
-  <!--               <li><a href="#">Deep Drop Down 2</a></li> -->
-  <!--               <li><a href="#">Deep Drop Down 3</a></li> -->
-  <!--               <li><a href="#">Deep Drop Down 4</a></li> -->
-  <!--               <li><a href="#">Deep Drop Down 5</a></li> -->
-  <!--             </ul> -->
-  <!--           </li> -->
-  <!--           <li><a href="#">Drop Down 2</a></li> -->
-  <!--           <li><a href="#">Drop Down 3</a></li> -->
-  <!--           <li><a href="#">Drop Down 4</a></li> -->
-  <!--         </ul> -->
-  <!--       </li> -->
-  <!--       <li><a class="nav-link scrollto" href="#contact">Contact</a></li> -->
-  <!--     </ul> -->
-  <!--     <i class="bi bi-list mobile-nav-toggle"></i> -->
-  <!--   </nav><!-- .navbar --> 
-  <!---->
-  <!-- </header><!-- End Header --> 
 
   <main id="main">
 
@@ -94,28 +50,6 @@
 
         <div class="row gy-4">
 
-          <!-- <div class="col-lg-8"> -->
-          <!--   <div class="portfolio-details-slider swiper"> -->
-          <!--     <div class="swiper-wrapper align-items-center"> -->
-          <!---->
-          <!--       <div class="swiper-slide"> -->
-          <!--         <img src="assets/img/portfolio/portfolio-details-1.jpg" alt=""> -->
-          <!--       </div> -->
-          <!---->
-          <!--       <div class="swiper-slide"> -->
-          <!--         <img src="assets/img/portfolio/portfolio-details-2.jpg" alt=""> -->
-          <!--       </div> -->
-          <!---->
-          <!--       <div class="swiper-slide"> -->
-          <!--         <img src="assets/img/portfolio/portfolio-details-3.jpg" alt=""> -->
-          <!--       </div> -->
-          <!---->
-          <!--     </div> -->
-          <!--     <!-- <div class="swiper-pagination"></div> --> 
-          <!--   </div> -->
-          <!-- </div> -->
-
-          <!-- <div class="col-lg-4"> -->
             <div class="portfolio-info">
               <h3>Assignment Info</h3>
               <ul>
@@ -123,7 +57,6 @@
                 <li><strong>Module no.</strong>: 01</li>
                 <li><strong>Start date</strong>:02 April 2024</li>
                 <li><strong>Assignment date</strong>:07 April 2024</li>
-                <!-- <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li> -->
               </ul>
             </div>
             <div class="portfolio-description">
@@ -192,7 +125,7 @@ git config --global user.email "demo.lappy@protonmail.com"</code></pre>
                 <br>
 
                 <li><strong>Push Changes:</strong> Push your committed changes to the remote repository.</li>
-                <pre><code>git push -u origin master</code></pre>
+                <pre><code>git push origin master</code></pre>
 
                 <li><strong>Link to my Github profile:</strong><a href="https://github.com/0xguava/"> 0xguava</a></li>
               </ol>
@@ -214,7 +147,6 @@ git config --global user.email "demo.lappy@protonmail.com"</code></pre>
               <h3>Conclusion</h3>
               <p>In conclusion, the past week has been incredibly rewarding, filled with learning and growth. I have gained a deeper understanding of web development technologies and tools, and I am excited to continue my journey and explore more advanced concepts in the weeks to come.</p>
             </div>
-          <!-- </div> -->
 
         </div>
 
@@ -227,24 +159,9 @@ git config --global user.email "demo.lappy@protonmail.com"</code></pre>
   <footer id="footer">
     <div class="container">
       <h3>Aditya Vilas Dhengre</h3>
-      <!-- <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p> -->
-      <!-- <div class="social-links"> -->
-      <!--   <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a> -->
-      <!--   <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a> -->
-      <!--   <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a> -->
-      <!--   <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a> -->
-      <!--   <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a> -->
-      <!-- </div> -->
       <div class="copyright">
         &copy; Copyright <strong><span>Aditya Vilas Dhengre</span></strong>. All Rights Reserved
       </div>
-      <!-- <div class="credits"> -->
-      <!--   <!-- All the links in the footer should remain intact. --> 
-      <!--   <!-- You can delete the links only if you purchased the pro version. --> 
-      <!--   <!-- Licensing information: https://bootstrapmade.com/license/ --> 
-      <!--   <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/laura-free-creative-bootstrap-theme/ --> 
-      <!--   Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> -->
-      <!-- </div> -->
     </div>
   </footer><!-- End Footer -->
 
