--- a/index.html
+++ b/index.html
@@ -209,11 +209,11 @@
 
             <div class="row">
               <div class="col-md-6">
-                <div class="info-box mt-4">
+                  <a href="mailto:adityadhengre0012@gmail.com"><div class="info-box mt-4">
                   <i class="bx bx-envelope"></i>
                   <h3>Email Me</h3>
                     <a href="mailto:adityadhengre0012@gmail.com"><p>aditya@aditya.com</p></a>
-                </div>
+                  </div></a>
               </div>
               <div class="col-md-6">
                 <div class="info-box mt-4">
