--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
         <li><a class="nav-link scrollto" href="#about">About</a></li>
         <li><a class="nav-link scrollto " href="#portfolio">Assignments</a></li>
+        <li><a class="nav-link scrollto" href="#agreement">Agreement</a></li>
         <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
       </ul>
       <i class="bi bi-list mobile-nav-toggle"></i>
@@ -193,6 +194,35 @@
       </div>
     </section><!-- End My Portfolio Section -->
 
+      <!-- Agreement section start -->
+    <section id="agreement" class="contact">
+      <div class="container">
+
+        <div class="section-title">
+          <span>Agreement</span>
+          <h2>Agreement</h2>
+        </div>
+
+        <div class="row">
+
+          <div class="col-lg-6">
+
+            <div class="row">
+              <div class="col-md-6">
+                  <a href="agreement.txt" ><div class="info-box mt-4">
+                  <i class="bx bxs-file-doc"></i>
+                  <h3>Fablab Academy Student Agreement</h3>
+                  </a>
+                </div>
+              </div>
+            </div>
+
+          </div>
+        </div>
+
+      </div>
+    </section><!-- End AgreementSection -->
+
     <!-- ======= Contact Me Section ======= -->
     <section id="contact" class="contact">
       <div class="container">
@@ -225,8 +255,6 @@
             </div>
 
           </div>
-
-
         </div>
 
       </div>
