--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                   <ul>
                     <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>BE in Computer Science Engineering (Ongoing)</span></li>
                     <li><i class="bi bi-chevron-right"></i> <strong>College:</strong> <span>Shri Sant Gajanan Maharaj College of Engineering, Shegaon</span></li>
-                    <li><i class="bi bi-chevron-right"></i> <strong>Skill:</strong> <span>Linux, Networking, Git, SSH, Web Development</span></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>Skill:</strong> <span>Linux, Git, SSH, Networking, C, Web Development</span></li>
                   </ul>
                 </div>
               </div>
