--- a/assets/img/assigments/webd/temp-port.html
+++ b/assets/img/assigments/webd/temp-port.html
@@ -35,7 +35,7 @@
       </div>
         <div class="quadrant quadrant4">
         <p>
-          In the digital realm, I am xyz, a curious explorer navigating the intricate landscapes of computer science. As a dedicated student, my quest for knowledge is relentless, driving me to unravel the mysteries of technology and its limitless possibilities. Embracing the ethos of Arch Linux, I embody the principles of simplicity, elegance, and customization, sculpting my digital domain into a masterpiece of efficiency and innovation.
+          In the digital realm, I am Aditya Dhengre, a curious explorer navigating the intricate landscapes of computer science. As a dedicated student, my quest for knowledge is relentless, driving me to unravel the mysteries of technology and its limitless possibilities. Embracing the ethos of Arch Linux, I embody the principles of simplicity, elegance, and customization, sculpting my digital domain into a masterpiece of efficiency and innovation.
 
           My journey into the world of computing began with a fascination for the intricate mechanisms that power our digital world. This passion evolved into a love affair with programming, where I discovered the art of crafting elegant solutions to complex problems. With each line of code, I sculpt virtual worlds and engineer digital marvels, pushing the boundaries of what is possible.
 
