--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <section id="hero">
     <div class="hero-container">
       <h1>Aditya Vilas Dhengre</h1>
-      <h2>I'm an UG student and I use Arch btw!</h2>
+      <h2>I'm a Linux user and I use Arch btw!</h2>
       <a href="#about" class="btn-scroll scrollto" title="Scroll Down"><i class="bx bx-chevron-down"></i></a>
     </div>
   </section><!-- End Hero -->
