sshkey.html added

--- a/assets/port-dets/webd.html
+++ b/assets/port-dets/webd.html
@@ -121,7 +121,7 @@ git config --global user.email "demo.lappy@protonmail.com"</code></pre>
 
                 <li><strong>Connect to Remote Repository:</strong> If you haven't already, connect your local repository to github repository using the following command.</li>
                 <pre><code>git remote add origin git@github.com:0xguava/fporto.git</code></pre>
-                <strong>*I've configured ssh keys in my github profile, my repository link could seem a bit different to you.*</strong>
+                <strong><a href="sshkey.html">*I've configured ssh keys in my github profile, my repository link could seem a bit different to you.*</a></strong>
                 <br>
 
                 <li><strong>Push Changes:</strong> Push your committed changes to the remote repository.</li>
