Module 2 Completed and portfolio update along with module 2 brief info and assignments

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
           
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-img">
-              <a href="assets/port-dets/3d-design.html" class="details-link" title="More Details"><img src="assets/img/assigments/3ddes/3d-design.jpeg" class="img-fluid" alt=""></a>
+              <a href="assets/port-dets/3ddes.html" class="details-link" title="More Details"><img src="assets/img/assigments/3ddes/3d-design.jpeg" class="img-fluid" alt=""></a>
               </div>
             <div class="portfolio-info">
               <h4>3D Designing</h4>
